--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="tumbleweed">#E8A87C</color>
     <color name="princeton_orange">#FF9000</color>
     <color name="gray">#808080</color>
+    <color name="Pantone">#E5C6AA</color>
 </resources>
