Memperbaiki CameraActivity.kt sehingga bisa digunakan Membuat class PreferencesHelper.kt Mengaplikasikan dark mode ke dalam aplikasi Mengubah warna pada semua file layout xml sehingga dinamis dengan dark mode

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="@color/lemon_chiffon"
+        android:background="?attr/colorPrimary"
         app:itemIconTint="@color/selector_bottom_nav"
         app:itemTextColor="@color/selector_bottom_nav"
         app:labelVisibilityMode="labeled"
