--- a/app/src/main/res/layout/fragment_chatbot.xml
+++ b/app/src/main/res/layout/fragment_chatbot.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lemon_chiffon"
+    android:background="?attr/colorPrimary"
     tools:context=".ui.chatbot.ChatbotFragment">
 
     <ImageView
@@ -25,7 +25,7 @@
         android:fontFamily="@font/opensans_variablefont_wdth_wght"
         android:text="@string/opening_chatbot"
         android:textAlignment="center"
-        android:textColor="@color/gray"
+        android:textColor="?android:textColorPrimary"
         android:textSize="11sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:hint="@string/typing"
             android:background="@drawable/rounded_edittext_background"
             android:padding="10dp"
-            android:textColor="@color/black"
+            android:textColor="?android:textColorPrimary"
             android:textColorHint="@color/gray" />
 
         <ImageButton
@@ -79,7 +79,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="10dp"
             android:src="@drawable/ic_send_24"
-            app:tint="@color/black" />
+            app:tint="?attr/colorOnSecondary" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
