--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lemon_chiffon"
+    android:background="?attr/colorPrimary"
     tools:context=".ui.result.ResultFragment">
 
     <androidx.cardview.widget.CardView
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:backgroundTint="@color/tumbleweed"
+        android:backgroundTint="?attr/colorPrimaryVariant"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
                 android:text="@string/result"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="?android:textColorPrimary"
                 android:layout_gravity="center_horizontal" />
 
             <LinearLayout
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_variablefont_wdth_wght"
                     android:text="@string/hello_blank_fragment"
-                    android:textColor="@color/black"
+                    android:textColor="?android:textColorPrimary"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -57,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="@color/Pantone"
+                android:backgroundTint="?attr/colorSecondaryVariant"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp">
 
@@ -73,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_variablefont_wdth_wght"
                         android:text="@string/results_from_chatbot"
-                        android:textColor="@color/black"
+                        android:textColor="?android:textColorPrimary"
                         android:textStyle="bold"
                         android:textSize="14sp"
                         android:layout_gravity="center_horizontal" />
@@ -85,7 +85,7 @@
                         android:padding="8dp"
                         android:fontFamily="@font/opensans_variablefont_wdth_wght"
                         android:text="@string/based_on_the_information_you_entered"
-                        android:textColor="@color/black"
+                        android:textColor="?android:textColorPrimary"
                         android:textSize="12sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -99,7 +99,7 @@
                 android:background="@drawable/rounded_button_background"
                 android:fontFamily="@font/opensans_variablefont_wdth_wght"
                 android:text="@string/ask_with_chatbot"
-                android:textColor="@color/black"
+                android:textColor="?android:textColorPrimary"
                 android:textStyle="bold"
                 android:textSize="14sp" />
         </LinearLayout>
