--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lemon_chiffon"
+    android:background="?attr/colorPrimary"
     tools:context=".ui.settings.SettingsFragment">
 
     <androidx.cardview.widget.CardView
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/tumbleweed"
+            android:background="?attr/colorPrimaryVariant"
             android:padding="16dp">
 
             <TextView
@@ -30,6 +30,7 @@
                 android:fontFamily="@font/opensans_variablefont_wdth_wght"
                 android:layout_marginEnd="8dp"
                 android:text="@string/dark_mode"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/description_text"
@@ -45,6 +46,7 @@
                 android:fontFamily="@font/opensans_variablefont_wdth_wght"
                 android:layout_marginBottom="16dp"
                 android:text="@string/enable_dark_mode"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@id/switch_theme"
                 app:layout_constraintStart_toStartOf="parent"
