--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,8 +8,8 @@
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondaryVariant">@color/lemon_chiffon</item>
+        <item name="colorOnSecondary">@color/tumbleweed</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimary</item>
@@ -17,6 +17,8 @@
         <!-- ActionBar title color for light mode -->
         <item name="actionBarTheme">@style/MyActionBar</item>
 
+        <!-- Text Color for light mode-->
+        <item name="android:textColorPrimary">@color/black</item>
     </style>
 
     <style name="MyActionBar" parent="Widget.AppCompat.ActionBar.Solid">
