1. Menambahkan class FoodDetailResponse, FoodResponse di package remote 2. menambahkan model tflite Image_ML_Model(90%).tflite 3. menambahkan id(kotlin-parcelize),implementation tensorflow-lite-task-vision  di build gradle(app) 4. menambahkan package helper yang berisi class ImageClassifierHelper 5. Perubahan pada MediaChooserFragment,FormFragment untuk menerima machine learning

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,6 +36,9 @@
         android:name="com.dicoding.calocare.ui.form.FormFragment"
         android:label="Form"
         tools:layout="@layout/fragment_form" >
+        <argument
+            android:name="foodName"
+            app:argType="string" />
         <action
             android:id="@+id/action_navigation_form_to_navigation_result"
             app:destination="@id/navigation_result" />
