1. Penambahan dependancies tensorflow di build.gradle(app) 2. perubahan teks pada fragment_form.xml, dan fragment_result.xml 3. Mengimplementasikan memasukan model tflite dengan google play service yang disimpan di src/main/assets 4. Penambahan class NutritionHelper untuk proses inference Nutritional_Evaluation_Model.tflite 5. penambahan beberapa teks di strings.xml

--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/foodNameInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/typing"
+                android:hint="@string/food_name"
                 android:background="@drawable/edit_text_background"
                 android:padding="8dp"
                 android:layout_marginBottom="16dp" />
@@ -70,7 +70,7 @@
                 android:id="@+id/carbohydrateInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/typing"
+                android:hint="@string/carbohydrate"
                 android:background="@drawable/edit_text_background"
                 android:padding="8dp"
                 android:layout_marginBottom="16dp" />
@@ -88,7 +88,7 @@
                 android:id="@+id/proteinInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/typing"
+                android:hint="@string/protein"
                 android:background="@drawable/edit_text_background"
                 android:padding="8dp"
                 android:layout_marginBottom="16dp" />
@@ -106,7 +106,7 @@
                 android:id="@+id/fatInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/typing"
+                android:hint="@string/fat"
                 android:background="@drawable/edit_text_background"
                 android:padding="8dp"
                 android:layout_marginBottom="16dp" />
@@ -124,7 +124,7 @@
                 android:id="@+id/caloriesInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/typing"
+                android:hint="@string/calories"
                 android:background="@drawable/edit_text_background"
                 android:padding="8dp"
                 android:layout_marginBottom="24dp" />
