Membuat splash screen pada aplikasi Membuat fitur notification Membuat file DailyNotificationWorker.kt Membuat animasi fade_in.xml untuk splash screen Memperbaiki warna agar dinamis dengan dark mode pada fragment_media_chooser.xml, fragment_result.xml, item_food.xml Membuat fitur date Memperbaiki penamaan fragment result Membuat file SplashActivity.kt

--- a/app/src/main/res/layout/fragment_media_chooser.xml
+++ b/app/src/main/res/layout/fragment_media_chooser.xml
@@ -118,8 +118,9 @@
                 android:id="@+id/analyzeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="?attr/colorSecondaryVariant"
                 android:text="@string/analyze_food"
-                android:textColor="@color/black"/>
+                android:textColor="?android:textColorPrimary"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
