--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -48,7 +48,7 @@
     <fragment
         android:id="@+id/navigation_result"
         android:name="com.dicoding.calocare.ui.result.ResultFragment"
-        android:label="fragment_result"
+        android:label="Result"
         tools:layout="@layout/fragment_result" >
         <action
             android:id="@+id/action_navigation_result_to_navigation_chatbot"
