--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,9 +103,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:text="@string/foods_eaten"
-                        android:textStyle="bold"
                         android:textColor="?android:textColorPrimary"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -135,10 +135,11 @@
                         android:textSize="20sp" />
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycler_dishes"
+                        android:id="@+id/dishesRecyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:nestedScrollingEnabled="false"
+                        android:orientation="horizontal"
                         tools:listitem="@layout/item_food" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -169,7 +170,7 @@
                         android:textSize="20sp" />
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycler_package_food"
+                        android:id="@+id/packageFoodRecyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:nestedScrollingEnabled="false"
