--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -77,6 +77,9 @@
         <action
             android:id="@+id/action_navigation_result_to_navigation_chatbot"
             app:destination="@id/navigation_chatbot" />
+        <action
+            android:id="@+id/action_navigation_result_to_navigation_home"
+            app:destination="@id/navigation_home" />
     </fragment>
     <fragment
         android:id="@+id/navigation_mediaChooser"
