--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="princeton_orange">#FF9000</color>
     <color name="gray">#808080</color>
     <color name="Pantone">#E5C6AA</color>
+    <color name="Madder">#A71D31</color>
 </resources>
