--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,11 +9,7 @@
         android:id="@+id/navigation_home"
         android:name="com.dicoding.calocare.ui.home.HomeFragment"
         android:label="@string/calocare"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_navigation_home_to_navigation_result"
-            app:destination="@id/navigation_result" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_add_food"
