--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,7 +55,7 @@
     <fragment
         android:id="@+id/navigation_result"
         android:name="com.dicoding.calocare.ui.result.ResultFragment"
-        android:label="fragment_result"
+        android:label="Result"
         tools:layout="@layout/fragment_result" >
         <argument
             android:name="foodName"
